src/mermaid/ascii/flowchart/snapshots/veol__mermaid__ascii__flowchart__render__tests__render_node_with_multiline_label.snap
---
source: src/mermaid/ascii/flowchart/render.rs
expression: "render_src(\"graph LR\\nA[line1<br>line2] --> B\")"
---
┌───────┐     ┌───┐
│       │     │   │
│ line1 │     │ B │
│ line2 ├─────►   │
│       │     │   │
└───────┘     └───┘
