src/mermaid/ascii/flowchart/snapshots/veol__mermaid__ascii__flowchart__render__tests__render_subgraph_nested.snap
---
source: src/mermaid/ascii/flowchart/render.rs
expression: "render_src(\"graph LR\\nsubgraph S1[Outer]\\n  subgraph S2[Inner]\\n    A --> B\\n  end\\nend\")"
---
┌────────Outer────────┐
│                     │
│                     │
│                     │
│ ┌──────Inner──────┐ │
│ │                 │ │
│ │                 │ │
│ │                 │ │
│ │ ┌───┐     ┌───┐ │ │
│ │ │   │     │   │ │ │
│ │ │ A ├─────► B │ │ │
│ │ │   │     │   │ │ │
│ │ └───┘     └───┘ │ │
│ │                 │ │
│ └─────────────────┘ │
│                     │
└─────────────────────┘
