src/mermaid/ascii/flowchart/snapshots/veol__mermaid__ascii__flowchart__render__tests__render_subgraph_simple.snap
---
source: src/mermaid/ascii/flowchart/render.rs
expression: "render_src(\"graph LR\\nsubgraph S1[Group]\\n  A --> B\\nend\")"
---
┌──────Group──────┐
│                 │
│                 │
│                 │
│ ┌───┐     ┌───┐ │
│ │   │     │   │ │
│ │ A ├─────► B │ │
│ │   │     │   │ │
│ └───┘     └───┘ │
│                 │
└─────────────────┘
