src/mermaid/ascii/flowchart/snapshots/veol__mermaid__ascii__flowchart__render__tests__render_two_independent_components.snap
---
source: src/mermaid/ascii/flowchart/render.rs
expression: "render_src(\"graph LR\\nA --> B\\nC --> D\")"
---
┌───┐     ┌───┐
│   │     │   │
│ A ├─────► B │
│   │     │   │
└───┘     └───┘



┌───┐     ┌───┐
│   │     │   │
│ C ├─────► D │
│   │     │   │
└───┘     └───┘
