src/mermaid/ascii/flowchart/snapshots/veol__mermaid__ascii__flowchart__render__tests__render_two_node_td_unicode.snap
---
source: src/mermaid/ascii/flowchart/render.rs
expression: "render_src(\"graph TD\\nA --> B\")"
---
┌───┐
│   │
│ A │
│   │
└─┬─┘
  │
  │
  │
┌─▼─┐
│   │
│ B │
│   │
└───┘
